--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,17 +1,26 @@
 @font-face {
     font-family: "Montserrat";
-    font-weight: regular;
-    src: url(fonts/Montserrat-Regular.otf) format("otf");
+    font-weight: normal;
+    src: 
+        url("../fonts/Montserrat-Regular.woff2") format("woff2"),
+        url("../fonts/Montserrat-Regular.otf") format("opentype"),
+        url("../fonts/Montserrat-Regular.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Montserrat";
-    font-weight: medium;
-    src: url(fonts/Montserrat-Medium.otf) format("otf");
+    font-weight: 500;
+    src: 
+        url("../fonts/Montserrat-Medium.woff2") format("woff2"),
+        url("../fonts/Montserrat-Medium.otf") format("opentype"),
+        url("../fonts/Montserrat-Medium.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Montserrat";
     font-weight: bold;
-    src: url(fonts/Montserrat-Bold.otf) format("otf");
+    src: 
+        url("../fonts/Montserrat-Bold.woff2") format("woff2"),
+        url("../fonts/Montserrat-Bold.otf") format("opentype"),
+        url("../fonts/Montserrat-Bold.ttf") format("truetype");
 }
