--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,7 @@ input[type="radio"]:checked + .form__colors-item::before {
     font-weight: 500;
     font-size: 15px;
     line-height: normal;
+    cursor: pointer;
 }
 
 .look__another::after {
